Add POST, PUT, DELETE routes and Swagger
